# AyaFi

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  sidecar.spec  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
config/: app.yaml.example  global.md
config/prompts/: emojis.md  hooks.md  post_modes.md  soul_topics.md  tones.md
config/sns/: bluesky.md  note.md  threads.md
docs/: architecture.md  runbook.md
docs/decisions/: 001-initial-architecture.md  002-mvp-scope.md  003-ipc-protocol.md  004-llm-provider-abstraction.md  005-post-history-and-integrity.md  006-note-paste-assist.md  008-logging-strategy.md  009-sns-content-generation-engine.md  010-error-handling-ux.md  011-code-signing.md  012-threads-algorithm-strategy.md
scripts/: cli.py  gen_ts_types.py  refresh_threads_token.py  sidecar.py  test_threads_post.py
secrets/: .env.example
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  logging.rs  main.rs  sidecar.rs
src/aya_afi/: __init__.py
src/aya_afi/affiliate/: __init__.py  base.py  errors.py  factory.py  mock.py  moshimo.py  rakuten.py  urls.py
src/aya_afi/config/: __init__.py  settings.py
src/aya_afi/ipc/: __init__.py  handlers.py  protocol.py  server.py
src/aya_afi/llm/: __init__.py  base.py  errors.py  factory.py  gemini.py  mock.py
src/aya_afi/poster/: __init__.py  base.py  bluesky.py  errors.py  factory.py  image_host.py  mock.py  note_clipboard.py  threads.py
src/aya_afi/sns_engine/: __init__.py  base.py
src/aya_afi/sns_engine/validators/: __init__.py  bluesky.py  threads.py
src/aya_afi/storage/: __init__.py  db.py  models.py  recovery.py  service.py
src/aya_afi/utils/: __init__.py  logging.py  paths.py
tests/: conftest.py
tests/affiliate/: test_factory.py  test_mock.py  test_moshimo.py  test_rakuten.py  test_urls.py
tests/config/: test_settings.py
tests/ipc/: test_fetch_product_handler.py  test_handlers.py  test_protocol.py  test_server.py
tests/llm/: test_base.py  test_factory.py  test_mock.py
tests/poster/: test_base.py  test_bluesky.py  test_dry_run.py  test_factory.py  test_image_host.py  test_mock.py  test_note_clipboard.py  test_threads.py
tests/sns_engine/: test_bluesky_validator.py  test_threads_validator.py
tests/storage/: test_models.py  test_recovery.py  test_service.py
tests/utils/: test_logging.py  test_paths.py
ui/: index.html
ui/src/: App.css  App.tsx  main.tsx  prompts.ts  settings-store.ts
