[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "aya-afi"
version = "0.1.0"
description = "SNS affiliate posting assistant for Windows (Tauri + Python sidecar)."
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "kyohei" }]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-json-logger>=3.0",
  "python-dotenv>=1.0",
  "tenacity>=8.3",
  "aiolimiter>=1.1",
  "httpx>=0.27",
  "pyperclip>=1.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.6",
  "black>=24",
  "mypy>=1.10",
  "pre-commit>=3.6",
  "datamodel-code-generator>=0.25",
  "types-pyperclip",
]
llm = [
  "google-genai>=0.5",
  "anthropic>=0.34",
]
storage = [
  "sqlalchemy>=2",
  "alembic>=1.13",
]
sns = [
  "atproto>=0.0.50",
  "Pillow>=10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aya_afi"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ANN", "S", "RUF"]
# ANN401: allow `Any` in limited contexts (params dicts, SDK payloads).
# RUF001/RUF002/RUF003: full-width Japanese punctuation (？ ！ 「 」 etc.) is
# intentional in all user-facing strings, not a confusable.
ignore = ["ANN401", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# S101 asserts OK in pytest; S106 fake credentials in fixtures; S108 /tmp
# placeholder paths; ANN inferred types OK in tests.
"tests/**" = ["S101", "S106", "S108", "ANN"]
"scripts/**" = ["ANN"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["aya_afi"]
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["pythonjsonlogger.*", "pyperclip.*", "atproto", "atproto.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# --import-mode=importlib lets us have duplicate basenames across subdirs
# (e.g. test_mock.py in both tests/llm/ and tests/affiliate/) without needing
# package __init__ files.
addopts = "-q --import-mode=importlib --cov=src/aya_afi --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
branch = true
source = ["src/aya_afi"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
